# emotionsgame_5_nomonitor

./: .gitignore  README.md  WARP.md  emotionsgame_5.otreezip  emotionsgame_5_nomonitor.otreezip  participant_labels.txt  pyproject.toml  settings.py  styles.css
_static/global/: empty.css
chatpractice/: Chat.html  RegroupingMessage.html  __init__.py  chatExplanation.html  tests.py
finalresults/: __init__.py  payment.html  survey.html  tests.py
introduction/: Intro.html  __init__.py  all_instructions.html  instructions_x_quiz.html  p2.html  p3.html  p4.html  p5.html  p6.html  p7.html  practice.html  practice_only.html  quiz.html  tests.py
src/emotionsgame/: __init__.py
supergame1/: Chat.html  Contribute.html  RegroupingMessage.html  Results.html  ResultsOnly.html  StartPage.html  __init__.py  results1.html
supergame2/: RegroupingMessage.html  ResultsOnly.html  StartPage.html  __init__.py
supergame3/: RegroupingMessage.html  Results.html  ResultsOnly.html  StartPage.html  __init__.py  tests.py
supergame4/: RegroupingMessage.html  Results.html  ResultsOnly.html  StartPage.html  __init__.py
supergame5/: ChatFirst.html  EndMessage.html  Results.html  ResultsOnly.html  StartPage.html  __init__.py  tests.py
