[project]
name = "emotionsgame"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "calebeynon", email = "ceynon@crimson.ua.edu" }
]
dependencies = [
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "otree>=5.11.4",
    "tabulate>=0.9.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/emotionsgame"]
